--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "leash",
   "version": "1.0.0",
-  "description": "![License Badge](https://shields.io/badge/license-MIT-yellow)  \r Application [Link](https://lumo-grindz.herokuapp.com/)\r ## Table of Contents\r 1. [Description](#description)\r 2. [User Story](#user-story)\r 3. [Installation](#installation)\r 4. [Usage](#usage)\r 5. [Contributing](#contributing)\r 6. [Tests](#tests)\r 7. [License](#license)\r 8. [Questions](#questions)",
-  "main": "index.js",
+  "description": "",
+  "main": "server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "seed": "cd server && npm run seed",
+    "build": "cd client && npm run build"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/eSTee3/Leash.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/eSTee3/Leash/issues"
-  },
-  "homepage": "https://github.com/eSTee3/Leash#readme"
+  "devDependencies": {
+    "concurrently": "^5.1.0"
+  }
 }
+
