--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "eject": "react-scripts eject"
   },
   "engines" : { 
-    "node" : ">=16.0.0 <17.0.0"
+    "node" : ">=16.0.0 <17.0.0",
+    "npm": "8.19.2"
   },
   "eslintConfig": {
     "extends": [
