--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "cd client && npm run build"
   },
   "engines" : { 
-    "node" : ">=16.0.0 <17.0.0"
+    "node" : ">=16.0.0 <17.0.0",
+    "npm": "8.19.2"
   },
   "keywords": [],
   "author": "",
