--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "seed": "node config/seeds.js"
   },
   "engines" : { 
-    "node" : ">=16.0.0 <17.0.0"
+    "node" : ">=16.0.0 <17.0.0",
+    "npm": "8.19.2"
   },
   "keywords": [],
   "author": "",
