--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
+    "install-client": "cd client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build",
     "seed": "cd server && npm run seed",
     "server": "nodemon server.js",
     "build": "cd client && npm run build"
   },
   "engines": {
-    "node": ">=16.0.0 <17.0.0",
-    "npm": "8.19.2"
+    "node": ">=16.0.0 <17.0.0"
   },
   "keywords": [],
   "author": "",
