--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "watch": "nodemon",
-    "seed": "node config/seeds.js"
+    "watch": "nodemon server.js"
   },
   "engines" : { 
     "node" : ">=16.0.0 <17.0.0"
@@ -20,11 +19,9 @@
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10",
-    "stripe": "^8.67.0"
+    "mongoose": "^5.9.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
   }
 }
-
