--- a/client/package.json
+++ b/client/package.json
@@ -8,16 +8,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "apollo-client": "^2.6.10",
+    "apollo-server-express": "^2.15.0",
     "bootstrap": "^4.4.1",
+    "dotenv": "^16.0.3",
     "graphql": "^14.6.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "apollo-client": "^2.6.10",
-    "apollo-server-express": "^2.15.0"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,8 +26,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "engines" : { 
-    "node" : ">=16.0.0 <17.0.0"
+  "engines": {
+    "node": ">=16.0.0 <17.0.0"
   },
   "eslintConfig": {
     "extends": "react-app"
