--- a/package.json
+++ b/package.json
@@ -7,24 +7,13 @@
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "install-client": "cd client && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build",
-    "server": "nodemon server.js",
+    "seed": "cd server && npm run seed",
     "build": "cd client && npm run build"
-  },
-  "engines": {
-    "node": ">=16.0.0 <17.0.0"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^5.1.0",
-    "webpack": "^4.42.0"
-  },
-  "dependencies": {
-    "apollo-client": "^2.6.10",
-    "apollo-server-express": "^2.15.0",
-    "graphql": "^15.5.2"
+    "concurrently": "^5.1.0"
   }
 }
