--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "install-client": "cd client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build",
     "server": "nodemon server.js",
+    "seed": "cd server && npm run seed",
     "build": "cd client && npm run build"
   },
   "engines" : { 
