--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "install-client": "cd client && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build",
+    "heroku-postbuild": "npm run install-client && npm run build && cd client && npm start",
     "server": "nodemon server.js",
     "seed": "cd server && npm run seed",
     "build": "cd client && npm run build"
